2007-03-21  Nurdin Premji  <npremji@redhat.com>

	* TestFrame.java (test32): New test.
	(backtrace): Refactored backtrace testing code to here.
	(testAttached): Updated.
	
2007-03-20  Nurdin Premji  <npremji@redhat.com>

	* StackAccessors.java: Add a reference to addressSpace so garbage collector
	doesn't destroy it.
	* StackFactory.java (createStackTrace): Updated.

2007-03-21  Mike Cvet  <mcvet@redhat.com>

	* TestStepping.java (testStepSigLongJmp): Added, re: #4016.
	(testStepGoto): Ditto.
	(setUpTest): Added code for above two new tests.
	(assertions): Ditto.
	
	* TestStepping.java (testStepSigRaise): Added. Marked broken pending #4237.
	(setUpTest): Added code for signal raise test.
	(assertions): Ditto.

2007-03-21  Tim Moore  <timoore@redhat.com>

	* BreakpointCollection.java: New superclass for breakpoints.
	* LineBreakpoint.java (LineBreakpoint): Use it.
	(addBreakpoint, deleteBreakpoint): Remove.
	* FunctionBreakpoint.java: New class.

2007-03-20  Mike Cvet  <mcvet@redhat.com>

	* StackFrame.java (getLines): Prepend the compilation directory to the
	source file location if the given path is relative, rather than absolute. 
	Fixes #4220.

2007-03-19  Mike Cvet  <mcvet@redhat.com>

	* TestStepping.java (assertions): Fixed up a couple assertions.

2007-03-16  Mike Cvet  <mcvet@redhat.com>

	* RunState.java (setRunning): Added.

2007-03-15  Sami Wagiaalla  <swagiaal@redhat.com>

	* StackFactory.java (printStackTrace): new function.

2007-03-15  Mike Cvet  <mcvet@redhat.com>

	* TestStepping.java: Deleted old constants, added new ones.
	(test): Determines which test is running.
	(CFile): Source file path for test program.
	(testRecursiveLineStepping): Removed.
	(testASMStepping): Removed.
	(testLineStepFunctionCall): Added.
	(testLineStepIfStatementPass): Added.
	(testLineStepIfStatementFail): Added.
	(testLineStepFunctionReturn): Added.
	(testASMSingleStep): Added.
	(testASMMultiStep): Added.
	(testASMJump): Added.
	(setUpTest): Re-written.