@@ -1,3 +1,15 @@
+2007-03-22  Mike Cvet  <mcvet@redhat.com>
+
+	* RunState.java (lineCountMap): Removed. Fixes #3700.
+	(RunState): Removed above HashMap. Line stepping a one-line
+	looper will now continue to loop until a user-requested stop.
+	(setUp): Removed above HashMap.
+	(setUpLineStep): Ditto.
+	(stepIn): Removed code assuming lines have a finite number of
+	instructions to step.
+	* TestRunState.java (setUpTest): Step only the main Task.
+	(stepAssertions): Removed references to signal-thread looping.
+
 2007-03-21  Nurdin Premji  <npremji@redhat.com>
 
 	* TestFrame.java (test32): New test.
